MMC Version 0.17.1
  Updated CANLED64-A507-2g & MMCTEST-0001-1a MDF's
  Added  "useSwitchTeach2": true to CANPAN & VLCBTEST to mergConfig.json
  Updated Client
    Added eventIdentityShowVariables to EventsListByNode
    replaced requestAllEventsByIndex with requestAllEventsByNENRD
    Commented out 'saved indexes' from EventsListByNode


MMC Version 0.17.0
  Added CANCDU_U to mergConfig
  Updated CANLED64-A507-2g & MMCTEST-0001-1a MDF's
  Added SERVER_NOTIFICATION to programNodeMMC
  removed nodeNumber from eventsByIndex & storedEventsNI
  removed long events from nodeNumberIsSource
  updated client
    Added node_useSwitchTeach2
    Amended EventTeachDialog to support indexed events
    Added support for event variables for indexed events
    nodeEventsDialog now uses EventsListByNode
    Modified firmware version display to support VLCB patch number, not beta
    check node exists in layout before adding backup list
    corrected LIST_OF_BACKUPS_FOR_ALL_NODES
    Now ignores CAN_SW nodes on FCU import
    Added EventVariableCollectionSelect
    activateSlot now shows variables


MMC Version 0.16.0
  Added getModuleInfo
  changed mergConfig to added flags to CANACE3 & CANACE3C to use indexed events view & switch teaching
  Updated client
    added getListOfTokens & extractMDFTokens
    names menu in NodesVariablesDialog behind develop flag
    updated readme tests.md
    Now uses values for "useEventIndex", "useNENRD", "numberOfEvents" & "useSwitchTeach1"
    from mergConfig as well as MDF
    Updated backup & restore to support CANACE3(C) that uses indexed events
    Fixed issue with not setting group in add new node
    added useSlots property
    Amended jsonLogic EV operators to support indexed events


MMC Version 0.15.1
Updated client
  Fixed issue in EventsListByNode not displaying bus events

MMC Version 0.15.0
  added REQUEST_NODE_EVENT_BY_INDEX (uses NENRD)
  added REQUEST_EVENT_VARIABLES_BY_INDEX
  reworked requestAllEventVariablesByIndex